# iFAMS

./: .gitignore  README.md  pyproject.toml
source/: __init__.py  iFAMS_GUI.py  iFAMS_v6.3_Quant_GUI.py
source/iFAMS_Fun/: Calibration.py  FT.py  Integrate.py  Isotope_Distr_Calc_string.py  Isotope_Library_string.py  MSload.py  Phase.py  STFT.py  batch_param_template.py  batch_parameter_master.csv
