[project]
name = "iFAMS"
version = "6.3.1"
description = "Interactive Fourier-Transform Analysis for Mass Spectrometry, a tool for mass spectrum white-noise filtering and charge state deconvolution for polydisperse ESI-MS data."
authors = [
	{name= "Sean P. Cleary"},
	{name= "Abdrew K. Swansiger"},
	{name= "Meghan M. Daniels"},
	{name= "Kayd L. Meldrum"},
	{name= "Lily Miller"},
	{name= "James S. Prell"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	'numpy',
	'scipy',
	'matplotlib',
	'PyQt5',
]

[tool.setuptools.package-dir]
# declares that the "iFAMS" package is contained inside the `source/` subdirectory.
iFAMS = "source"

[project.gui-scripts]
# this provides an executable to be installed with pipx and uvx
ifams = "iFAMS:__name__"

[project.urls]
Repository = "https://github.com/prellgroup/iFAMS"
Issues = "https://github.com/prellgroup/iFAMS/issues"
Homepage = "https://github.com/prellgroup/iFAMS"

[build-system]
requires = ["setuptools"]
build-backend="setuptools.build_meta"

#[tool.uv.build-backend]
#module-name = ""
